Finito index.html version mobile + correction W3C

--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -1,20 +1,14 @@
-.main {
-    max-width: 768px; /* Limite maximale pour la largeur du main */
-    margin: 0 auto; /* Centre le main horizontalement */
-    padding: 0 0; /* Padding horizontal pour ajouter de l'espace */
-    background-color: red;
-}
-
-
 .titre--big {
-    text-align: center; /* Centre le titre horizontalement */
+    text-align: center;
+    /* Centre le titre horizontalement */
     font-size: 3.38em;
     margin: 5.06rem 2.25rem 3.38rem 2.25rem;
 }
 
 .titre--medium {
     font-size: 2.25em;
-    text-align: center; /* Centre le titre horizontalement */
+    text-align: center;
+    /* Centre le titre horizontalement */
     margin: 3.38rem 2.25rem 3.38rem 2.25rem;
 }
 
@@ -22,16 +16,16 @@
 // À propos de moi
 //********************************
 
-.about {
-    width: 100vw;
+.about, .projets {
+    box-shadow: 0px 0px 10px $grey_softer;
     z-index: 3;
     position: relative;
 }
 
-.about__image {
-    width: 100%;
-    z-index: 3;
-    position: relative;
+.about__image, .projets__image  {
+    display: block; /* Assurez-vous que l'image est un élément de bloc */
+    margin: 0; /* Supprimez toutes les marges */
+    padding: 0; /* Supprimez tous les rembourrages */
 }
 
 .lien__formeBouton {
@@ -63,93 +57,187 @@
 // SLIDER
 //********************************
 
-.slider__container {
-    border-top: 1px solid $grey_soft;
-    border-bottom: 1px solid $grey_soft;  
+.slider__container, .about {
     position: relative;
     width: 100%;
-    max-width: 600px;
+    max-width: 500px;
     margin: auto;
     overflow: hidden;
-  }
-  
-  .slider {
+}
+
+.slider {
     display: flex;
     transition: transform 0.5s ease-in-out;
-  }
-  
-  .slider__slide {
+}
+
+.slider__slide {
     min-width: 100%;
     box-sizing: border-box;
-  }
-  
-  .slider__indicators {
+}
+
+.slider__indicators {
     position: absolute;
     bottom: 1.50rem;
     left: 1.50rem;
     display: flex;
     gap: 0.44rem;
-  }
-  
-  .slider__indicator {
+}
+
+.slider__indicator {
     width: 0.67rem;
     height: 0.67rem;
     background-color: $grey_soft;
     border-radius: 50%;
     cursor: pointer;
-  }
-  
-  .slider__indicator--active {
-    background-color: $gold;
-  }
-  
-  .slider__read-more {
+}
+
+.slider__indicator--active {
+    background-color: $grey_softer;
+}
+
+.slider__lirePlus {
     position: absolute;
-    bottom: 20px;
-    right: 20px;
-    z-index: 10;
-  }
-  
-  .popup {
-    display: none;
+    bottom: 1.50rem;
+    right: 1.50rem;
+    background-color: black;
+    border: 1px solid black;
+    border-radius: 1rem;
+    color: white;
+    text-transform: uppercase;
+    padding: 0.30rem 1rem;
+
+    transition: all 0.3s ease-in-out;
+
+    &:hover,
+    &:focus {
+        background-color: $grey_soft;
+        border: 1px solid $grey_soft;
+    }
+}
+
+.popup {
     position: fixed;
-    top: 0;
+    top: 0px;
+    left: 0px;
+    transform: translateX(-100%);
+    z-index: 99;
+
+    backdrop-filter: blur(2px);
+    position: fixed;
+    bottom: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
-  }
-  
-  .popup__content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    width: 80%;
-    max-width: 400px;
-    position: relative;
-    animation: slide-in 0.5s ease-in-out;
-  }
-  
-  .popup__close {
+    z-index: 50;
+
+    transition: all 0.3s ease-in-out;
+
+    &--active {
+        transform: translateX(0);
+    }
+}
+
+.popup__content {
+    border-top: #2b2b2b 1px solid;
+    border-radius: 1rem 1rem 0 0;
+    background-color: rgb(255, 255, 255);
     position: absolute;
-    top: 10px;
-    right: 10px;
+    bottom: 0;
+    width: 100%;
+    height: 60%;
+    animation: slide-in 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out;
+    display: flex;
+    justify-content: center;
+}
+
+.popup__content h3 {
+    font-family: "Limelight", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    text-transform: uppercase;
+    font-size: 2.25rem;
+}
+
+.popup__texte {
+    display: grid;
+    align-content: center;
+    gap: 10px;
+    width: 300px;
+    padding: 0;
+
+    & a {
+        font-family: "Outfit", sans-serif;
+        background-color: transparent;
+        border: 1px solid black;
+        border-radius: 1rem;
+        color: black;
+        text-transform: uppercase;
+        padding: 0.30rem 1rem;
+        text-decoration: none;
+        transition: all 0.3s ease-in-out;
+        text-transform: uppercase;
+
+        &:hover,
+        &:focus {
+            color: white;
+            background-color: black;
+        }
+    }
+
+    & p:first-of-type {
+        color: $gold;
+    }
+}
+
+
+.popup__close {
     cursor: pointer;
-    font-size: 1.5rem;
-  }
-  
-  @keyframes slide-in {
+    background-color: transparent;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0.67em;
+    right: 0.67em;
+    width: 50px;
+    height: 50px;
+    border: none;
+    border-radius: 50%;
+
+    transition: all 0.3s ease-in-out;
+}
+
+.popup__svg {
+    width: 36px;
+    height: 36px;
+    fill: #2b2b2b;
+}
+
+.popup__close {
+    &:hover {
+        cursor: pointer;
+        background-color: black;
+
+        & svg {
+            fill: white;
+        }
+    }
+}
+
+@keyframes slide-in {
     from {
-      transform: translateX(-100%);
+        transform: translateX(-100%);
     }
+
     to {
-      transform: translateX(0);
+        transform: translateX(0);
     }
-  }
-  
-  .slider__nav {
+}
+
+.slider__nav {
     display: none;
     position: absolute;
     top: 50%;
@@ -160,19 +248,18 @@
     padding: 10px;
     cursor: pointer;
     z-index: 5;
-  }
-  
-  .slider__nav--prev {
+}
+
+.slider__nav--prev {
     left: 10px;
-  }
-  
-  .slider__nav--next {
+}
+
+.slider__nav--next {
     right: 10px;
-  }
-  
-  @media (min-width: 768px) {
+}
+
+@media (min-width: 768px) {
     .slider__nav {
-      display: block;
+        display: block;
     }
-  }
-  
+}
